src/objects/eCASS_settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Attendance_Name_Template__c</fullName>
        <defaultValue>&quot;Att-$NAME$-$DATE$&quot;</defaultValue>
        <inlineHelpText>Format of the attendance name.
$NAME$ is replaced with the client&apos;s name
$DATE$ is replaced with the date of the attendance
$INITIALS$ is replaced with the client&apos;s initials
Everything else is left alone</inlineHelpText>
        <label>Attendance Name Template</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autonumber_Client_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If on, then this client id field is not used in the eCASS reports, instead an autonumber is used. So the Record Valid on the Contact ignores Client ID</inlineHelpText>
        <label>Autonumber Client ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Care_Plan_Overview_Print_Page__c</fullName>
        <defaultValue>&quot;CarePlanOverviewPrint&quot;</defaultValue>
        <inlineHelpText>Change this if you want a different page printed for the care plan overview</inlineHelpText>
        <label>Care Plan Overview Print Page</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Plan_Print_Page__c</fullName>
        <defaultValue>&quot;CarePlanPrintPage&quot;</defaultValue>
        <inlineHelpText>Page referenced from the print button on the care plan page</inlineHelpText>
        <label>Care Plan Print Page</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_past_attendances__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>On enrolment in a course, create past attendance records</inlineHelpText>
        <label>Create past attendances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_attendance_duration__c</fullName>
        <defaultValue>60</defaultValue>
        <inlineHelpText>Duration of a one to one attendance</inlineHelpText>
        <label>Default attendance duration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disable_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When ticked turns off eCASS triggers, useful for batch importing and debugging</inlineHelpText>
        <label>Disable Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrolment_Name_Template__c</fullName>
        <defaultValue>&quot;Enr-$NAME$-$DATE$&quot;</defaultValue>
        <inlineHelpText>Format of the enrolment name.
$NAME$ is replaced with the client&apos;s name
$DATE$ is replaced with the Enrolment date (either the Date joined program or the created date)
$INITIALS$ is replaced with the client&apos;s initials
Everything else is left alone</inlineHelpText>
        <label>Enrolment Name Template</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HRB_Form_Name_Template__c</fullName>
        <defaultValue>&quot;HRB-$NAME$-$DATE$&quot;</defaultValue>
        <inlineHelpText>Format of the form name.
$NAME$ is replaced with the client&apos;s name
$DATE$ is replaced with the date of the assessment
$INITIALS$ is replaced with the client&apos;s initials
Everything else is left alone</inlineHelpText>
        <label>HRB Form Name Template</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Name__c</fullName>
        <defaultValue>&quot;Organisation&quot;</defaultValue>
        <label>Organisation Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Name_Template__c</fullName>
        <defaultValue>&quot;Ref-$NAME$-$DATE$&quot;</defaultValue>
        <inlineHelpText>Format of the referral name.
$NAME$ is replaced with the client&apos;s name
$DATE$ is replaced with the date of the referral
$INITIALS$ is replaced with the client&apos;s initials
Everything else is left alone</inlineHelpText>
        <label>Referral Name Template</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rules_on__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Turn off for data import</inlineHelpText>
        <label>Rules on</label>
        <type>Checkbox</type>
    </fields>
    <label>eCASS settings</label>
</CustomObject>